<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_top"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Admin_Register">

    <TextView
        android:id="@+id/Admin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"
        android:text="@string/Admin"
        android:textColor="@android:color/black"
        android:textSize="45sp" />


    <EditText
        android:id="@+id/Admin_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_curve"
        android:drawableStart="@drawable/ic_baseline_contact_phone_24"
        android:hint="@string/mobileNumber"
        android:inputType="number"
        android:maxEms="10"
        android:paddingStart="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp" />

    <Button
        android:id="@+id/send_otp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_curve_admin"
        android:text="@string/OTP" />


</LinearLayout>