<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_top"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Register"
        android:textColor="@android:color/black"
        android:textSize="45sp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/btn_curve"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/black"
            app:hintTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uname"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_curve"
                android:drawableStart="@drawable/ic_person_24"
                android:hint="@string/Name"
                android:paddingStart="15dp"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/black"
            app:hintTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uemail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_curve"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/mobileNumber"
                android:inputType="number"
                android:paddingStart="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_curve_admin"
            android:text="@string/Submit"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/Admin_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:text="@string/Admin"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


</RelativeLayout>